--- a/Portfolio-Website/style.css
+++ b/Portfolio-Website/style.css
@@ -1,3 +1,4 @@
+
 body {
     height: 100vh;
     width: 100vw;
@@ -79,16 +80,21 @@ main yo mo h1 {
     text-align: left;
     text-indent: 2%;
 }
-
-main yo circle {
-
-    height: 600px;
-    width: 600px;
-    box-sizing: border-box;
-    background-color: #242424;
-    border-radius: 50%;
-    display: inline-block;
-
+@media only screen and (max-width: 599px) {
+    main yo circle {
+        display: none;
+    }
+}
+@media only screen and (min-width: 600px) {
+    main yo circle {
+        height: 600px;
+        width: 600px;
+        box-sizing: border-box;
+        background-color: #242424;
+        border-radius: 50%;
+        display: inline-block;
+    
+    }
 }
 
 main yo circle img {
@@ -360,4 +366,8 @@ button:hover {
     height: 0.5vh;
     width: 50vw;
     background-color: #FFA500;
+}
+
+@media only screen {
+    
 }
